--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
           <button id="providerOllamaBtn" type="button">OLLAMA</button>
           <button id="providerOpenaiBtn" type="button">OPENAI</button>
           <button id="providerAnthropicBtn" type="button">ANTHROPIC</button>
+          <button id="providerGeminiBtn" type="button">GEMINI</button>
         </div>
 
         <div id="ollamaSettings" class="provider-block">
@@ -64,6 +65,16 @@
             <option value="claude-haiku-4-5-20251001">claude-haiku-4-5-20251001</option>
             <option value="claude-sonnet-4-6">claude-sonnet-4-6</option>
             <option value="claude-opus-4-6">claude-opus-4-6</option>
+          </select>
+        </div>
+
+        <div id="geminiSettings" class="provider-block hidden">
+          <label for="geminiKeyInput">API KEY</label>
+          <input id="geminiKeyInput" type="password" autocomplete="off" placeholder="AIza..." />
+          <label for="geminiModelSelect">MODELO</label>
+          <select id="geminiModelSelect">
+            <option value="gemini-2.5-flash">gemini-2.5-flash</option>
+            <option value="gemini-2.5-pro">gemini-2.5-pro</option>
           </select>
         </div>
 
@@ -104,6 +115,24 @@
         <h2>Asistente de Inicio</h2>
         <p id="setupSummary">Comprobando Ollama y modelo local...</p>
         <ul id="setupChecklist" class="setup-checklist"></ul>
+        <div id="setupProfileBlock" class="setup-profile-block">
+          <p id="setupProfileHint" class="setup-profile-hint">Elige un perfil de rendimiento.</p>
+          <div class="setup-profile-actions">
+            <button id="setupProfileLightBtn" type="button">Ligero (PC modesto)</button>
+            <button id="setupProfileBalancedBtn" type="button">Equilibrado (recomendado)</button>
+            <button id="setupProfilePowerBtn" type="button">Potente (más calidad)</button>
+          </div>
+        </div>
+        <details class="setup-advanced">
+          <summary>Opciones avanzadas</summary>
+          <div class="setup-model-row">
+            <label for="setupModelSelect">Modelo a descargar</label>
+            <select id="setupModelSelect"></select>
+          </div>
+        </details>
+        <div class="setup-note">
+          En modo normal solo eliges perfil. Puedes abrir “Opciones avanzadas” si quieres cambiar el modelo exacto.
+        </div>
         <div class="setup-actions">
           <button id="setupInstallBtn" type="button" class="primary hidden">Instalar Ollama</button>
           <button id="setupStartBtn" type="button" class="hidden">Iniciar Ollama</button>
